Issue #2581189 by alexei.truhin: Option text overlap with arrow

--- a/hierarchical_select-rtl.css
+++ b/hierarchical_select-rtl.css
@@ -43,6 +43,8 @@
 /* Child level indicator. */
 .hierarchical-select-wrapper .hierarchical-select option.has-children {
   background: url(images/arrow-rtl.png) no-repeat left center;
+  padding-left: 20px;
+  padding-right: 0;
 }
 
 
